--- a/index.html
+++ b/index.html
@@ -13,97 +13,117 @@
 
 <body>
     <header class="header">
-        <nav>
-            <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
-            <ul>
-                <li><a href="https://github.com/genius-space" target="_blank">Genius-home</a></li>
-                <li><a target="_blank"
-                        href="https://www.figma.com/file/sBABARapP4nL9lK1dG3n1l/Beauty-Zone?type=design&node-id=30-13827&mode=design&t=cmAA0J5edjeibI8d-0">Home
-                        Figma</a></li>
-                <li><a href="#hero-section">Про нас</a></li>
-                <li><a href="#main-section">Чому ми</a></li>
-                <li><a href="#card-section">Наші процедури</a></li>
-                <li><a href="#slider-section">Контакти</a></li>
-            </ul>
-            <a href="#"><img src="./image/Vector(4).svg" alt="телефон"></a>
-            <a href="#"><img src="./image/Vector(5).svg" alt="фейсбук"></a>
-            <a href="#"><img src="./image/Vector(6).svg" alt="інстаграм"></a>
-        </nav>
+        <div class="container">
+            <nav>
+                <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
+                <ul>
+                    <li><a href="https://github.com/genius-space" target="_blank">Genius-home</a></li>
+                    <li><a target="_blank"
+                            href="https://www.figma.com/file/sBABARapP4nL9lK1dG3n1l/Beauty-Zone?type=design&node-id=30-13827&mode=design&t=cmAA0J5edjeibI8d-0">Home
+                            Figma</a></li>
+                    <li><a href="#hero-section">Про нас</a></li>
+                    <li><a href="#main-section">Чому ми</a></li>
+                    <li><a href="#card-section">Наші процедури</a></li>
+                    <li><a href="#slider-section">Контакти</a></li>
+                </ul>
+                <a href="#"><img src="./image/Vector(4).svg" alt="телефон"></a>
+                <a href="#"><img src="./image/Vector(5).svg" alt="фейсбук"></a>
+                <a href="#"><img src="./image/Vector(6).svg" alt="інстаграм"></a>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="hero-section" id="hero-section">
-            <p>Косметологічна клініка</p>
-            <h1 class="play-bold">Beauty Zone</h1>
-            <button class="button" type="button">Замовити дзвінок</button>
-            <p>Запишись та отримай безкоштовну консультацію нашого косметолога</p>
+            <div class="container">
+                <p class="hero-item">Косметологічна клініка</p>
+                <h1 class="play-bold hero-logo">Beauty<br>Zone</h1>
+                <button class="button" type="button">Замовити дзвінок</button>
+                <p class="mini-p">Запишись та отримай безкоштовну <br>
+                    консультацію нашого косметолога</p>
+            </div>
         </section>
         <section class="main-section" id="main-section">
-            <h2 class="play-bold">Перевтілюйтесь в <span>beauty zone!</span></h2>
-            <p>Наша косметологічна клініка пропонує вам професійні послуги
-                з догляду за шкірою обличчя та тіла.</p>
-            <p>B <span>beauty zone</span> ми гарантуємо найвищі стандарти якості
-                та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою красу та
-                молодість.
-                З нами краса назавжди!</p>
-            <article></article>
-            <article></article>
+            <div class="container">
+                <h2 class="play-bold">Перевтілюйтесь в <span>beauty zone!</span></h2>
+
+                <p>Наша косметологічна клініка пропонує вам професійні послуги
+                    з догляду за шкірою обличчя та тіла.</p>
+                <p>B <span class="uppercase">beauty zone</span> ми гарантуємо найвищі стандарти якості
+                    та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою
+                    красу та
+                    молодість.
+                    З нами краса назавжди!</p>
+                <article></article>
+                <article></article>
+            </div>
         </section>
         <section class="card-section" id="card-section">
-            <h2 class="play-bold">Чому люди <span>обирають нас</span></h2>
-            <ul>
-                <li>
-                    <p>Всі наші косметологи мають вищу медичну освіту
-                        та стаж роботи від 5 років</p>
-                </li>
-                <li>
-                    <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
-                </li>
-                <li>
-                    <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
-                </li>
-            </ul>
-
-
-
+            <div class="container">
+                <h2 class="play-bold">Чому люди <span>обирають нас</span></h2>
+                <ul>
+                    <li>
+                        <p>Всі наші косметологи мають вищу медичну освіту
+                            та стаж роботи від 5 років</p>
+                    </li>
+                    <li>
+                        <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
+                    </li>
+                    <li>
+                        <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="slider-section" id="slider-section">
-            <h2 class="play-bold">Наші <span>процедури</span></h2>
-            <article></article>
-            <article></article>
-            <article></article>
+            <div class="container">
+                <h2 class="play-bold">Наші <span>процедури</span></h2>
+                <article>
+                    <p>Маски для обличчя</p>
+                </article>
+                <article>
+                    <p>Ін'єкції для обличчя</p>
+                </article>
+                <article>
+                    <p>Очищення обличчя</p>
+                </article>
+            </div>
         </section>
         <section class="contact-section" id="contact-section">
-            <h2 class="play-bold">Як нас <span>знайти</span></h2>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d81254.41978423421!2d30.5643046!3d50.4746088!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfa04a0c8e5b%3A0x3b40a2bcbca08807!2z0JrQuNC10LLQvi3Qn9C10YfQtdGA0YHQutCw0Y8g0LvQsNCy0YDQsA!5e0!3m2!1sru!2sua!4v1711527485909!5m2!1sru!2sua"
-                width="605" height="481" style="border:0; border-radius: 32px;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="container">
+                <h2 class="play-bold">Як нас <span>знайти</span></h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d81254.41978423421!2d30.5643046!3d50.4746088!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfa04a0c8e5b%3A0x3b40a2bcbca08807!2z0JrQuNC10LLQvi3Qn9C10YfQtdGA0YHQutCw0Y8g0LvQsNCy0YDQsA!5e0!3m2!1sru!2sua!4v1711527485909!5m2!1sru!2sua"
+                    width="605" height="481" style="border:0; border-radius: 32px;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
         </section>
     </main>
     <footer>
-        <nav>
-            <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
-            <ul>
-                <li><a href="#hero-section">Про нас</a></li>
-                <li><a href="#main-section">Чому ми</a></li>
-                <li><a href="#card-section">Наші процедури</a></li>
-                <li><a href="#slider-section">Контакти</a></li>
-            </ul>
-            <address>
+        <div class="container">
+            <nav class="footer-nav">
+                <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
                 <ul>
-                    <li><a href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
-                    <li><a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
-                    <li><a href="https://www.google.com.ua/maps/search/%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+%D0%BC.+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%B2%D1%83%D0%BB.+%D0%A2%D0%B0%D1%80%D0%B0%D1%81%D0%B0+%D0%A8%D0%B5%D0%B2%D1%87%D0%B5%D0%BD%D0%BA%D0%B0+5/@50.4746088,30.5643046,12z/data=!3m1!4b1?hl=ru&entry=ttu"
-                            target="_blank">Україна, м. Київ, вул. Тараса Шевченка 5</a>
-                    </li>
+                    <li><a href="#hero-section">Про нас</a></li>
+                    <li><a href="#main-section">Чому ми</a></li>
+                    <li><a href="#card-section">Наші процедури</a></li>
+                    <li><a href="#slider-section">Контакти</a></li>
                 </ul>
-            </address>
-            <a href="#"><img src="./image/Vector(7).svg" alt="телефон"></a>
-            <a href="#"><img src="./image/Vector(8).svg" alt="фейсбук"></a>
-            <a href="#"><img src="./image/Vector(9).svg" alt="інстаграм"></a>
-            <p>Політика конфіденційності</p>
-            <p>&copy; Дані захищені</p>
-        </nav>
+                <address>
+                    <ul>
+                        <li><a href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
+                        <li><a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
+                        <li><a href="https://maps.app.goo.gl/oVhKUfvnP2c9MmTg8" target="_blank">
+                                Україна, м. Київ, вул. Тараса Шевченка 5</a>
+                        </li>
+                    </ul>
+                </address>
+                <a href="#"><img src="./image/Vector(7).svg" alt="телефон"></a>
+                <a href="#"><img src="./image/Vector(8).svg" alt="фейсбук"></a>
+                <a href="#"><img src="./image/Vector(9).svg" alt="інстаграм"></a>
+                <p>Політика конфіденційності</p>
+                <p>&copy; Дані захищені</p>
+            </nav>
+        </div>
     </footer>
 </body>
 
