--- a/index.html
+++ b/index.html
@@ -14,91 +14,119 @@
 <body>
     <header class="header">
         <div class="container">
-            <nav>
+            <div class="header-container">
                 <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
-                <ul>
-                    <li><a href="https://github.com/genius-space" target="_blank">Genius-home</a></li>
-                    <li><a target="_blank"
-                            href="https://www.figma.com/file/sBABARapP4nL9lK1dG3n1l/Beauty-Zone?type=design&node-id=30-13827&mode=design&t=cmAA0J5edjeibI8d-0">Home
-                            Figma</a></li>
-                    <li><a href="#hero-section">Про нас</a></li>
-                    <li><a href="#main-section">Чому ми</a></li>
-                    <li><a href="#card-section">Наші процедури</a></li>
-                    <li><a href="#slider-section">Контакти</a></li>
-                </ul>
-                <a href="#"><img src="./image/Vector(4).svg" alt="телефон"></a>
-                <a href="#"><img src="./image/Vector(5).svg" alt="фейсбук"></a>
-                <a href="#"><img src="./image/Vector(6).svg" alt="інстаграм"></a>
-            </nav>
+                <nav class="header-nav">
+                    <ul class="header-menu">
+                        <li><a href="https://github.com/genius-space" target="_blank">Genius-home</a></li>
+                        <li><a target="_blank"
+                                href="https://www.figma.com/file/sBABARapP4nL9lK1dG3n1l/Beauty-Zone?type=design&node-id=30-13827&mode=design&t=cmAA0J5edjeibI8d-0">Home
+                                Figma</a></li>
+                        <li><a href="#main-section">Про нас</a></li>
+                        <li><a href="#card-section">Чому ми</a></li>
+                        <li><a href="#slider-section">Наші процедури</a></li>
+                        <li><a href="#contact-section">Контакти</a></li>
+                    </ul>
+                </nav>
+                <a href="#"><img class="header-img-link" src="./image/Vector(4).svg" alt="телефон"></a>
+                <a href="#"><img class="header-img-link" src="./image/Vector(5).svg" alt="фейсбук"></a>
+                <a href="#"><img class="header-img-link" src="./image/Vector(6).svg" alt="інстаграм"></a>
+            </div>
         </div>
     </header>
     <main>
         <section class="hero-section" id="hero-section">
             <div class="container">
-                <p class="hero-item">Косметологічна клініка</p>
-                <h1 class="play-bold hero-logo">Beauty<br>Zone</h1>
-                <button class="button" type="button">Замовити дзвінок</button>
-                <p class="mini-p">Запишись та отримай безкоштовну <br>
-                    консультацію нашого косметолога</p>
+                <div class="hero-content">
+                    <p class="hero-item">Косметологічна клініка</p>
+                    <h1 class="play-bold hero-logo">Beauty<br>Zone</h1>
+                    <button class="button" type="button">Замовити дзвінок</button>
+                    <p class="mini-p">Запишись та отримай безкоштовну <br>
+                        консультацію нашого косметолога</p>
+                </div>
             </div>
         </section>
         <section class="main-section" id="main-section">
             <div class="container">
-                <h2 class="play-bold">Перевтілюйтесь в <span>beauty zone!</span></h2>
+                <div class="main-container">
+                    <div class="main-content">
+                        <h2 class="play-bold">Перевтілюйтесь в <span>beauty zone!</span></h2>
 
-                <p>Наша косметологічна клініка пропонує вам професійні послуги
-                    з догляду за шкірою обличчя та тіла.</p>
-                <p>B <span class="uppercase">beauty zone</span> ми гарантуємо найвищі стандарти якості
-                    та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати свою
-                    красу та
-                    молодість.
-                    З нами краса назавжди!</p>
-                <article></article>
-                <article></article>
+                        <p>Наша косметологічна клініка пропонує вам професійні послуги
+                            з догляду за шкірою обличчя та тіла.</p>
+                        <p>B <span class="uppercase">beauty zone</span> ми гарантуємо найвищі стандарти якості
+                            та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати
+                            свою
+                            красу та
+                            молодість.
+                            З нами краса назавжди!</p>
+                    </div>
+                    <div class="main-image">
+                        <article class="main-image-first"><img src="./image/Mask-main.jpg" alt="обличчя жінки">
+                        </article>
+                        <article class="main-image-two"><img src="./image/Mask-main1.jpg" alt="обличчя жінки">
+                        </article>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="card-section" id="card-section">
             <div class="container">
-                <h2 class="play-bold">Чому люди <span>обирають нас</span></h2>
-                <ul>
-                    <li>
-                        <p>Всі наші косметологи мають вищу медичну освіту
-                            та стаж роботи від 5 років</p>
-                    </li>
-                    <li>
-                        <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
-                    </li>
-                    <li>
-                        <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
-                    </li>
-                </ul>
+                <div class="card-container">
+                    <h2 class="play-bold card-title">Чому люди <br> <span>обирають нас</span></h2>
+                    <ul class="card-list">
+                        <li class="card-item">
+                            <img src="./image/card-img-first.svg" alt="">
+                            <p>Всі наші косметологи мають вищу медичну освіту
+                                та стаж роботи від 5 років</p>
+                        </li>
+                        <li class="card-item">
+                            <img src="./image/card-img-two.svg" alt="">
+                            <p>Використовуємо тільки професійне обладнання та косметику, перевірену часом</p>
+                        </li>
+                        <li class="card-item">
+                            <img src="./image/card-img-three.svg" alt="">
+                            <p>Наша мета - підкреслити переваги та приховати недоліки, а не переробити</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </section>
         <section class="slider-section" id="slider-section">
             <div class="container">
-                <h2 class="play-bold">Наші <span>процедури</span></h2>
-                <article>
-                    <p>Маски для обличчя</p>
-                </article>
-                <article>
-                    <p>Ін'єкції для обличчя</p>
-                </article>
-                <article>
-                    <p>Очищення обличчя</p>
-                </article>
+                <h2 class="play-bold slider-title">Наші<span>процедури</span></h2>
+                <ul class="slider-list">
+                    <li class="slider-item">
+                        <article class="slider-card">
+                            <p>Маски <br>для обличчя</p>
+                        </article>
+                    </li>
+                    <li class="slider-item">
+                        <article class="slider-card">
+                            <p>Ін'єкції <br>для обличчя</p>
+                        </article>
+                    </li>
+                    <li class="slider-item">
+                        <article class="slider-card">
+                            <p>Очищення <br>обличчя</p>
+                        </article>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="contact-section" id="contact-section">
             <div class="container">
-                <h2 class="play-bold">Як нас <span>знайти</span></h2>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d81254.41978423421!2d30.5643046!3d50.4746088!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfa04a0c8e5b%3A0x3b40a2bcbca08807!2z0JrQuNC10LLQvi3Qn9C10YfQtdGA0YHQutCw0Y8g0LvQsNCy0YDQsA!5e0!3m2!1sru!2sua!4v1711527485909!5m2!1sru!2sua"
-                    width="605" height="481" style="border:0; border-radius: 32px;" allowfullscreen="" loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="contact-container">
+                    <h2 class="play-bold">Як нас <span>знайти</span></h2>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d81254.41978423421!2d30.5643046!3d50.4746088!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfa04a0c8e5b%3A0x3b40a2bcbca08807!2z0JrQuNC10LLQvi3Qn9C10YfQtdGA0YHQutCw0Y8g0LvQsNCy0YDQsA!5e0!3m2!1sru!2sua!4v1711527485909!5m2!1sru!2sua"
+                        width="605" height="481" style="border:0; border-radius: 32px;" allowfullscreen=""
+                        loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div class="container">
             <nav class="footer-nav">
                 <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
