--- a/index.html
+++ b/index.html
@@ -28,37 +28,66 @@
                         <li><a href="#contact-section">Контакти</a></li>
                     </ul>
                 </nav>
-                <a href="#"><img class="header-img-link" src="./image/Vector(4).svg" alt="телефон"></a>
-                <a href="#"><img class="header-img-link" src="./image/Vector(5).svg" alt="фейсбук"></a>
-                <a href="#"><img class="header-img-link" src="./image/Vector(6).svg" alt="інстаграм"></a>
+                <div class="header-icon-link">
+                    <a href="#">
+                        <svg class="header-svg" width="32" height="32">
+                            <use href="./image/icons.svg#phone"></use>
+                        </svg>
+                    </a>
+                    <a href="#">
+                        <svg class="header-svg" width="32" height="32">
+                            <use href="./image/icons.svg#facebook"></use>
+                        </svg>
+                    </a>
+                    <a href="#">
+                        <svg class="header-svg" width="32" height="32">
+                            <use href="./image/icons.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
     <main>
         <section class="hero-section" id="hero-section">
             <div class="container">
+
                 <div class="hero-content">
+
                     <p class="hero-item">Косметологічна клініка</p>
                     <h1 class="play-bold hero-logo">Beauty<br>Zone</h1>
-                    <button class="button" type="button">Замовити дзвінок</button>
+
+                    <button class="button modal-btn-open" type="button">Замовити дзвінок</button>
+
                     <p class="mini-p">Запишись та отримай безкоштовну <br>
                         консультацію нашого косметолога</p>
                 </div>
             </div>
+
         </section>
         <section class="main-section" id="main-section">
             <div class="container">
                 <div class="main-container">
+                    <svg class="star-first" width="64" height="64">
+                        <use href="./image/icons.svg#star-first"></use>
+                    </svg>
+                    <svg class="star-twoo" width="40" height="40">
+                        <use href="./image/icons.svg#star-twoo"></use>
+                    </svg>
+                    <svg class="star-three" width="16" height="16">
+                        <use href="./image/icons.svg#star-three"></use>
+                    </svg>
                     <div class="main-content">
-                        <h2 class="play-bold">Перевтілюйтесь в <span>beauty zone!</span></h2>
+                        <h2 class="play-bold main-title">Перевтілюйтесь в <span>beauty zone!</span></h2>
 
-                        <p>Наша косметологічна клініка пропонує вам професійні послуги
+                        <p>Наша косметологічна клініка пропонує вам професійні послуги<br>
                             з догляду за шкірою обличчя та тіла.</p>
-                        <p>B <span class="uppercase">beauty zone</span> ми гарантуємо найвищі стандарти якості
-                            та приємний сервіс. Наші косметологічні процедури та препарати допоможуть вам підтримувати
+                        <p>B <span class="uppercase">beauty zone</span> ми гарантуємо найвищі стандарти якості<br>
+                            та приємний сервіс. Наші косметологічні процедури та препарати<br> допоможуть вам
+                            підтримувати
                             свою
                             красу та
-                            молодість.
+                            молодість. <br>
                             З нами краса назавжди!</p>
                     </div>
                     <div class="main-image">
@@ -95,33 +124,56 @@
         <section class="slider-section" id="slider-section">
             <div class="container">
                 <h2 class="play-bold slider-title">Наші<span>процедури</span></h2>
-                <ul class="slider-list">
-                    <li class="slider-item">
-                        <article class="slider-card">
-                            <p>Маски <br>для обличчя</p>
-                        </article>
-                    </li>
-                    <li class="slider-item">
-                        <article class="slider-card">
-                            <p>Ін'єкції <br>для обличчя</p>
-                        </article>
-                    </li>
-                    <li class="slider-item">
-                        <article class="slider-card">
-                            <p>Очищення <br>обличчя</p>
-                        </article>
-                    </li>
-                </ul>
+                <div class="slider-container">
+                    <button class="slider-button" type="button">
+                        <svg width="16px" height="16px">
+                            <use href="./image/icons.svg#arrow"></use>
+                        </svg>
+                    </button>
+
+                    <ul class="slider-list">
+                        <li class="slider-item">
+                            <article class="slider-card">
+                                <p>Маски <br>
+                                    для обличчя</p>
+                            </article>
+                        </li>
+                        <li class="slider-item">
+                            <article class="slider-card">
+                                <p>Ін'єкції <br>
+                                    для обличчя</p>
+                            </article>
+                        </li>
+                        <li class="slider-item">
+                            <article class="slider-card">
+                                <p>Очищення <br>
+                                    обличчя</p>
+                            </article>
+                        </li>
+                    </ul>
+
+                    <button class="slider-button" type="button">
+                        <svg width="16px" height="16px">
+                            <use href="./image/icons.svg#arrow"></use>
+                        </svg>
+                    </button>
+                </div>
             </div>
         </section>
         <section class="contact-section" id="contact-section">
             <div class="container">
+                <h2 class="play-bold">Як нас <span>знайти</span></h2>
                 <div class="contact-container">
-                    <h2 class="play-bold">Як нас <span>знайти</span></h2>
-                    <iframe
+                    <iframe class="contact-map"
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d81254.41978423421!2d30.5643046!3d50.4746088!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfa04a0c8e5b%3A0x3b40a2bcbca08807!2z0JrQuNC10LLQvi3Qn9C10YfQtdGA0YHQutCw0Y8g0LvQsNCy0YDQsA!5e0!3m2!1sru!2sua!4v1711527485909!5m2!1sru!2sua"
-                        width="605" height="481" style="border:0; border-radius: 32px;" allowfullscreen=""
+                        width="605" height="481" style="border: none; border-radius: 32px;" allowfullscreen=""
                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <div class="contact-form">
+                        <h3>Запишіться <span>безкоштовно</span><br>
+                            та отримайте подарунок</h3>
+                        <button class="button contact-button" type="button">Записатись безкоштовно</button>
+                        <p>Натискаючи на кнопку я погоджуюсь <br> з політикою конфіденційності</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -130,29 +182,74 @@
         <div class="container">
             <nav class="footer-nav">
                 <a href="./index.html"><img src="./image/logo(1).svg" alt="логотип, назва 'beauty zone'"></a>
-                <ul>
-                    <li><a href="#hero-section">Про нас</a></li>
-                    <li><a href="#main-section">Чому ми</a></li>
-                    <li><a href="#card-section">Наші процедури</a></li>
-                    <li><a href="#slider-section">Контакти</a></li>
-                </ul>
-                <address>
-                    <ul>
-                        <li><a href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
-                        <li><a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
-                        <li><a href="https://maps.app.goo.gl/oVhKUfvnP2c9MmTg8" target="_blank">
-                                Україна, м. Київ, вул. Тараса Шевченка 5</a>
+                <div>
+                    <ul class="footer-menu">
+                        <li><a href="#hero-section">Про нас</a></li>
+                        <li><a href="#main-section">Чому ми</a></li>
+                        <li><a href="#card-section">Наші процедури</a></li>
+                        <li><a href="#slider-section">Контакти</a></li>
+                    </ul>
+                </div>
+                <div class="address">
+                    <address>
+                        <ul class="address-items">
+                            <li><a href="tel:+38(096)0000007">+ 38 (096) 000 00 07</a></li>
+                            <li><a href="mailto:beautyzone@gmail.com">beautyzone@gmail.com</a></li>
+                            <li><a href="https://maps.app.goo.gl/oVhKUfvnP2c9MmTg8" target="_blank">
+                                    Україна, м. Київ, вул. Тараса Шевченка 5</a>
+                            </li>
+                        </ul>
+                    </address>
+                    <ul class="address-icons">
+                        <li>
+                            <a class="footer-soc" href="#">
+                                <svg class="footer-svg" width="42" height="42">
+                                    <use href="./image/icons.svg#phone"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="footer-soc" href="#">
+                                <svg class="footer-svg" width="42" height="42">
+                                    <use href="./image/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="footer-soc" href="#">
+                                <svg class="footer-svg" width="42" height="42">
+                                    <use href="./image/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
-                </address>
-                <a href="#"><img src="./image/Vector(7).svg" alt="телефон"></a>
-                <a href="#"><img src="./image/Vector(8).svg" alt="фейсбук"></a>
-                <a href="#"><img src="./image/Vector(9).svg" alt="інстаграм"></a>
-                <p>Політика конфіденційності</p>
-                <p>&copy; Дані захищені</p>
+                </div>
+                <div>
+                    <ul class="footer-copy">
+                        <li>
+                            <p class="footer-kon">Політика конфіденційності</p>
+                        </li>
+                        <li>
+                            <p class="copy-item">&copy; Дані захищені</p>
+                        </li>
+                    </ul>
+                </div>
             </nav>
+            <div class="footer-photo"></div>
         </div>
     </footer>
+
+    <div class="backdrop">
+        <div class="modal">
+            <button class="modal-btn-close" type="button">close</button>
+            <h2>Igor Manusha </h2>
+            <p>middle web-developer</p>
+
+            <video class="video" autoplay controls src="./media/dont_cry1.mp4"></video>
+
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 
 </html>
