--- a/index.html
+++ b/index.html
@@ -217,19 +217,18 @@
 
                             </li>
 
-                            <li class="swiper-slide">
 
+                            <li class="swiper-slide">
                                 <div class="slider-section__trans">
                                     <article class="slider-section__card slider-section__card:hover">
-                                        <img class="slider-section__image" src="./image/over-mother.jpg"
-                                            alt="Маски для обличча">
+                                        <img class="slider-section__image" src="./image/igor-twoo.jpg"
+                                            alt="Очищення обличча">
                                         <div class="slider-section__text">
-                                            <h3>Любов <br>
-                                                та Турбота</h3>
+                                            <h3>Сила <br>
+                                                Витримка </h3>
                                         </div>
                                     </article>
                                 </div>
-
 
 
                             </li>
@@ -243,22 +242,6 @@
                                         <div class="slider-section__text">
                                             <h3>Приклад <br>
                                                 та Підтримка</h3>
-                                        </div>
-                                    </article>
-                                </div>
-
-
-                            </li>
-
-
-                            <li class="swiper-slide">
-                                <div class="slider-section__trans">
-                                    <article class="slider-section__card slider-section__card:hover">
-                                        <img class="slider-section__image" src="./image/igor-twoo.jpg"
-                                            alt="Очищення обличча">
-                                        <div class="slider-section__text">
-                                            <h3>Сила <br>
-                                                Витримка </h3>
                                         </div>
                                     </article>
                                 </div>
@@ -290,6 +273,23 @@
                                         <div class="slider-section__text">
                                             <h3>Красунчик <br>
                                                 року 2024</h3>
+                                        </div>
+                                    </article>
+                                </div>
+
+
+
+                            </li>
+
+                            <li class="swiper-slide">
+
+                                <div class="slider-section__trans">
+                                    <article class="slider-section__card slider-section__card:hover">
+                                        <img class="slider-section__image" src="./image/over-mother.jpg"
+                                            alt="Маски для обличча">
+                                        <div class="slider-section__text">
+                                            <h3>Любов <br>
+                                                та Турбота</h3>
                                         </div>
                                     </article>
                                 </div>
@@ -350,31 +350,28 @@
                         <h3 class="contact-section__title">Запишіться <span>безкоштовно</span><br>
                             та отримайте подарунок</h3>
 
-
-                        <!-- <form name="contact-section__form-item contact-form" autocomplete="on">
-                            <div class="form-field">
-                                <label class="form-label visually-hidden" for="contact-user-name">Ваше ім'я та
-                                    прізвище</label>
-                                <input class="form-input" type="text" id="contact-user-name"
+                        <form class="contact-form" autocomplete="off" novalidate>
+                            <div>
+                                <!-- <label class="contact-form__label visually-hidden" for="us-name">Ваше ім'я та
+                                    прізвище</label> -->
+                                <input class="contact-form__input" type="text" id="us-name"
                                     placeholder="Ваше ім'я та прізвище">
+
                             </div>
+                            <div>
+                                <!-- <label class="contact-form__label visually-hidden" for="">Ваш номер телефону</label> -->
+                                <input class="contact-form__input" type="text" placeholder="Ваш номер телефону">
 
-                            <div class="form-field">
-                                <label class="form-label visually-hidden" for="contact-user-tel">Телефон</label>
-                                <input class="form-input" type="tel" id="contact-user-tel" placeholder="Телефон">
                             </div>
+                            <div>
+                                <!-- <label class="contact-form__label visually-hidden" for="">Ваша електронна пошта</label> -->
+                                <input class="contact-form__input" type="text" placeholder="Ваша електронна пошта">
 
-                            <div class="form-field">
-                                <label class="form-label visually-hidden" for="contact-user-email">Ваш емейл</label>
-                                <input class="form-input" type="email" id="contact-user-email" placeholder="Ваш емейл">
                             </div>
+                            <button class="button contact-form__button" type="submit">Записатись безкоштовно</button>
+                        </form>
 
 
-                            <button type="submit"
-                                class="button contact-section__button contact-section__button:hover">Записатись
-                                безкоштовно</button>
-
-                        </form> -->
 
                         <p class="contact-section__form-privaci">Натискаючи на кнопку я погоджуюсь <br> з політикою
                             конфіденційності</p>
