--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <div class="slider-section__container">
 
                     <div class="slider-section__button">
-                        <button type="button" class="slider-button next">
+                        <button type="button" class="slider-button prev">
                             <svg width="16px" height="16px">
                                 <use href="./image/icons.svg#arrow"></use>
                             </svg>
@@ -358,7 +358,7 @@
                     </div>
 
                     <div class="slider-section__button">
-                        <button type="button" class="slider-button__rotate slider-button prev">
+                        <button type="button" class="slider-button__rotate slider-button next">
                             <svg width="16px" height="16px">
                                 <use href="./image/icons.svg#arrow"></use>
                             </svg>
